strip out extra js

--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -11,7 +11,7 @@
 
   <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required title="Passwords must be at least 8 characters long, and can be letters, numbers, or the following: !@#$%^&*().,">
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required title="Passwords must be at least 8 characters long, and can be letters, numbers, and the following: !@#$%^&*().,">
 	</fieldset>
 
 	<button class="primary-button" type="submit" name="sso-submit">Sign In</button>
