--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -12,12 +12,12 @@
 		
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" required autofocus title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
   </fieldset>
 
   <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern=".{8,128}" required title="Passwords must be at least 8 characters long">
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required title="Passwords must be at least 8 characters long, and can be letters, numbers, and the following: !@#$%^&*().,">
 	</fieldset>
 	
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
