--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -12,15 +12,15 @@
 		
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" required autofocus title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters" tabindex="1" required autofocus>
   </fieldset>
 
   <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required title="Passwords must be at least 8 characters long, and can be letters, numbers, and the following: !@#$%^&*().,">
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords must be at least 8 characters long and consist of letters, numbers, and the following symbols: !@#$%^&*().," tabindex="2" required>
 	</fieldset>
-	
-  <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
+
+	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
 	
 	<ul class="sso-links">
 		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
