--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -11,10 +11,10 @@
 
   <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords must be at least 8 characters long, and can be letters, numbers, and the following: !@#$%^&*().," tabindex="2" required>
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords must be at least 8 characters long and consist of letters, numbers, and the following symbols: !@#$%^&*().," tabindex="2" required>
 	</fieldset>
 
-	<input class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
+	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
 	
 	<ul class="sso-links">
 		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
