error page styling, misc cleanup

--- a/_includes/as-app-sso-form-fail.html
+++ b/_includes/as-app-sso-form-fail.html
@@ -4,7 +4,7 @@
   
   <legend>Sign In using this application's UCLA Logon Account</legend>
   
-  <div class="error-box">
+  <div class="error-box-solid">
     <h2>Your ID and/or password were incorrect.</h2>
     
     <p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
