--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -24,6 +24,7 @@
 @import 'ucla-iam-core/form-elements';
 @import 'ucla-iam-core/general-classes';
 @import 'ucla-iam-core/flair';
+@import 'ucla-iam-core/messages';
 @import 'ucla-iam-core/webshim-styling';
 
 // app specific styles
