--- a/_scss/ucla-iam-core/_general-classes.scss
+++ b/_scss/ucla-iam-core/_general-classes.scss
@@ -1,6 +1,5 @@
-.error-box {
-	background: repeating-linear-gradient(45deg, $error-color-dark, $error-color-dark $half-spacing, $error-color-dark-alt $half-spacing, $error-color-dark-alt $default-spacing);
-	color: $error-color;
+%error-base {
+  color: $error-color;
 	h2, h3, p {
 		color: $error-color;
 	}
@@ -11,40 +10,21 @@
 	border-radius: $global-border-radius;
 	text-align: center;
 	margin-top: 0;
+}
+
+.error-box {
+	background: repeating-linear-gradient(45deg, $error-color-dark, $error-color-dark $half-spacing, $error-color-dark-alt $half-spacing, $error-color-dark-alt $default-spacing);
+	@extend %error-base;
 }
 
 .error-box-solid {
 	background: $error-color-dark;
-	color: $error-color;
-	h2, h3, p {
-		color: $error-color;
-	}
-	p {
-		font-size: $meta-font-size;
-	}
-	padding: $half-spacing;
-	border-radius: $global-border-radius;
-	text-align: center;
-	margin-top: 0;
+	@extend %error-base;
 }
 
 .error-box-lite {
-  color: $error-color;
-  h2, h3, p {
-    color: $error-color;
-  }
-  h2 {
-    font-size: $h3-font-size;
-  }
-  p {
-    font-size: $meta-font-size;
-  }
-  padding: $half-spacing;
-  border-radius: $global-border-radius;
   border: 1px solid $error-color;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: $default-spacing;
+  @extend %error-base;
 }
 
 .error-title {
