tighten up messages

--- a/_includes/banner-dev.html
+++ b/_includes/banner-dev.html
@@ -1,1 +1,1 @@
-<aside class="location-banner-dev">Keep in mind you're on a dev server! Phew, prod isn't broken after all. ;)</aside>
+<aside class="location-banner-dev">Phew you're on dev... prod isn't broken after all. ;)</aside>
