--- a/_includes/banner-qa.html
+++ b/_includes/banner-qa.html
@@ -1,1 +1,1 @@
-<aside class="location-banner-qa">FYI - you're checking things out on QA! File those bugs...</aside>
+<aside class="location-banner-qa">FYI - you're checking things out on QA!</aside>
