--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -5,7 +5,7 @@ section[role="main"] {
 	}
 }
 
-article, #sso, .sp-support, .ucla-iam-footer-content {
+article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 	width: 94%;
 	margin: 0 auto;
 	@include breakpoint($grid-elastic) {
