white logo floating on clouds. uwah~

--- a/_layouts/ucla-logon.html
+++ b/_layouts/ucla-logon.html
@@ -1,5 +1,7 @@
 {% include ucla-head.html %}
 
+	<img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA" class="logo">
+
 	<section class="content" role="main">
 			{{ content }}
 	</section>
