--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -1,8 +1,5 @@
 section[role="main"] {
-	margin: $double-spacing auto $quad-spacing * 2;
-	@include breakpoint($grid-liquid) {
-		margin-top: $triple-spacing * 2;
-	}
+  margin-bottom: $quad-spacing * 2
 }
 
 article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
@@ -10,6 +7,15 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 	margin: 0 auto;
 	@include breakpoint($grid-elastic) {
 		width: 34.5em;
+	}
+}
+
+.logo {
+	display: none;
+	width: 30em;
+	margin: $double-spacing auto 0;
+	@include breakpoint($grid-liquid) {
+		display: block;
 	}
 }
 
