--- a/_scss/ucla-this-app/_login-form.scss
+++ b/_scss/ucla-this-app/_login-form.scss
@@ -1,12 +1,3 @@
-.logo {
-	display: block;
-	margin: 0 auto;
-	width: 80%;
-	@include breakpoint($grid-liquid) {
-		width: 70%;
-	}
-}
-
 .login-form {
 	padding-bottom: 0;
 }
@@ -16,9 +7,10 @@
 	box-shadow: 0 1px 1px #347bad;
 	overflow: hidden;
 	border-radius: $global-border-radius;
-	padding: 0 7.5% 2.5%;
+	padding: 2.5% 7.5% ;
+	margin-top: $default-spacing;
 	@include breakpoint($grid-elastic) {
-		padding: 0 4em 1.5em;
+		padding: $double-spacing $quad-spacing;
 	}
 	label {
 		display: none;
