--- a/_layouts/ucla-logon-on-dev.html
+++ b/_layouts/ucla-logon-on-dev.html
@@ -2,6 +2,8 @@
 
 {% include banner-dev.html %}
 
+	<img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA" class="logo">
+
 	<section class="content" role="main">
 			{{ content }}
 	</section>
