extra tag, failed login styling

--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -24,5 +24,8 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 }
 
 .login-fail {
-  margin-bottom: $default-spacing;
+  h3 {
+    margin-top: 0;
+  }
+  
 }
