--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -5,7 +5,7 @@
 	<div class="error-box-lite login-fail">
 		<h3>Your ID and/or password were incorrect.</h3>
 				
-		<p>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></p>
+		<p>Try again, or <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">lookup your UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password"> reset your password</a>.</p>
 	</div>
 		
   <fieldset class="fieldset">
@@ -21,7 +21,7 @@
 	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
 	
 	<ul class="sso-links">
-		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
+		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</li>
 		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
