--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -15,7 +15,7 @@
 	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
 
 	<ul class="sso-links">
-		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
+		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</li>
 		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 
