--- a/_layouts/ucla-logon.html
+++ b/_layouts/ucla-logon.html
@@ -1,6 +1,6 @@
 {% include ucla-head.html %}
 
-	<img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA" class="logo">
+	<header class="logo"><img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA"></header>
 
 	<section class="content" role="main">
 			{{ content }}
