waia-aria for page header

--- a/_layouts/ucla-logon-on-dev.html
+++ b/_layouts/ucla-logon-on-dev.html
@@ -2,7 +2,7 @@
 
 {% include banner-dev.html %}
 
-	<header class="logo"><img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA"></header>
+	<header class="logo" role="banner"><img src="{{ site.baseurl }}/images/ucla-white.png" alt="UCLA"></header>
 
 	<section class="content" role="main">
 			{{ content }}
