--- a/_includes/ucla-footer-as-app-link.html
+++ b/_includes/ucla-footer-as-app-link.html
@@ -4,7 +4,5 @@
 	</div>
 </footer>
 
-<script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
-<script src="{{ site.baseurl }}/js/jquery.countdownTimer.min.js"></script>
+<script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
 <script src="{{ site.baseurl }}/js/sso.js"></script>
