--- a/_scss/ucla-iam-core/_form-elements.scss
+++ b/_scss/ucla-iam-core/_form-elements.scss
@@ -75,6 +75,10 @@ select:valid {
   color: $neutral;
 }
 
+::input-placeholder {
+  color: $neutral;
+}
+
 select {
 	border: 1px solid $neutral;
 	background-color: $white;
