drop sso.js since empty, tweak failed login

--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -5,7 +5,7 @@
 	<div class="error-box-lite login-fail">
 		<h3>Your ID and/or password were incorrect.</h3>
 				
-		<p>Try again below. If this happens again, it might be a good idea to <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">lookup your UCLA Logon ID</a> and/or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">reset your password</a>.</p>
+		<p>Try again below, <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">lookup your UCLA Logon ID</a>, or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">reset your password</a>.</p>
 	</div>
 		
   <fieldset class="fieldset">
