--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -3,8 +3,8 @@ section[role="main"] {
 }
 
 article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
-	width: 94%;
-	margin: 0 auto;
+	width: 96%;
+	margin: $default-spacing auto 0;
 	@include breakpoint($grid-elastic) {
 		width: 36em;
 	}
