broke footer fixing content heh

--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -9,6 +9,9 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 		width: 36em;
 	}
 }
+.ucla-iam-footer-content {
+  margin-top: 0;
+}
 
 .right {
 	float: right;
