font-awesome to js spinner. consolidate idp/sp go
faster load times since we're not using much of the lib, no cdn reliance, ie9 spins.

--- a/_includes/as-app-footer.html
+++ b/_includes/as-app-footer.html
@@ -5,3 +5,5 @@
 </footer>
 
 <script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
+<script src="{{ site.baseurl }}/js/spin.min.js"></script>
+<script src="{{ site.baseurl }}/js/sso.js"></script>
