--- a/_includes/health-footer.html
+++ b/_includes/health-footer.html
@@ -1,7 +1,9 @@
 <footer role="contentinfo" class="ucla-iam-footer">
 	<div class="ucla-iam-footer-content">
-		<p><a href="{{ site.baseurl }}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/as-app-mocks/index.html" class="right" title="login as the application"><i class="fa fa-cogs"></i></a></p>
+		<p><a href="{{ site.baseurl }}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
 	</div>
 </footer>
 
 <script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
+<script src="{{ site.baseurl }}/js/spin.min.js"></script>
+<script src="{{ site.baseurl }}/js/sso.js"></script>
