--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -5,3 +5,5 @@
 </footer>
 
 <script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
+<script src="{{ site.baseurl }}/js/spin.min.js"></script>
+<script src="{{ site.baseurl }}/js/sso.js"></script>
