--- a/_scss/ucla-this-app/_supporting-content.scss
+++ b/_scss/ucla-this-app/_supporting-content.scss
@@ -1,3 +1,4 @@
+// UCLA image
 .logo {
 	display: block;
 	width: 100%;
@@ -69,10 +70,6 @@ article {
 }
 
 // spinner
-.loading i {
-	font-size: $h1-font-size * 2;
-	margin: $default-spacing 40%;
-	@include breakpoint($grid-liquid) {
-		margin: $default-spacing 45%;
-	}
+#loading-spinner {
+  height: $quad-spacing * 1.5;
 }
