--- a/_scss/ucla-iam-core/_global-elements.scss
+++ b/_scss/ucla-iam-core/_global-elements.scss
@@ -79,7 +79,7 @@ ol {
   }
 }
 
-section[role="main"] ul {
+ul.branded {
 	list-style: none;
 	padding-left: .1em;
 	margin-bottom: 0;
@@ -94,8 +94,4 @@ section[role="main"] ul {
 		left: -.13em;
 		top: .1em;
 	}
-}
-
-.touch section[role="main"] li {
-	margin: $default-spacing 0;
 }
