--- a/_includes/health-head.html
+++ b/_includes/health-head.html
@@ -7,6 +7,7 @@
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/medcenter.css">
+	<script src="{{ site.baseurl }}/js/modernizr.custom.js"></script>
 </head>
 
 <body>
