add in info for tickets

--- a/_scss/config/_as-app-vars.scss
+++ b/_scss/config/_as-app-vars.scss
@@ -83,6 +83,7 @@ $body-background-color: $white;
 
 $font-stack: 'Proxima Nova', Verdana, sans-serif;
 $font-stack-alt: 'Proxima Nova', Verdana, sans-serif;
+$font-stack-monospace: Inconsolata, Consolas, Menlo, monospace;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
