--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -112,6 +112,7 @@ $body-background-color: $white;
 
 $font-stack: "Adobe Univers", Futura, "Trade Gothic", Univers;
 $font-stack-alt: "Adobe Minion Regular", MinionPro, Bodoni, "Adobe Caslon", Century, Palatino;
+$font-stack-monospace: Inconsolata, Consolas, Menlo, monospace;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
