--- a/_scss/ucla-iam-core/_global-elements.scss
+++ b/_scss/ucla-iam-core/_global-elements.scss
@@ -1,75 +1,75 @@
 html {
-	background: $html-background;
+  background: $html-background;
   background-size: $html-background-size;
-	box-sizing: border-box;
-	position: relative; 
-	min-height: 100%;
-	width: 100%;
+  box-sizing: border-box;
+  position: relative; 
+  min-height: 100%;
+  width: 100%;
 }
 
 *, *:before, *:after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-	color: $body-text-color;
-	font-family: $font-stack;
-	letter-spacing: $global-letter-spacing;
+  color: $body-text-color;
+  font-family: $font-stack;
+  letter-spacing: $global-letter-spacing;
 }
 
 h1, h2, h3, h4 {
-	font-weight: normal;
-	color: $primary-color;
-	font-family: $font-stack-alt;
+  font-weight: normal;
+  color: $primary-color;
+  font-family: $font-stack-alt;
 }
 
 h1 {
-	font-size: $h2-font-size;
-	@include breakpoint($grid-liquid) {
-		font-size: $h1-font-size;
-	}
-	line-height: $base-line-height * .9;
-	margin: $half-spacing 0;
+  font-size: $h2-font-size;
+  @include breakpoint($grid-liquid) {
+    font-size: $h1-font-size;
+  }
+  line-height: $base-line-height * .9;
+  margin: $half-spacing 0;
 }
 
 h2 {
-	font-size: $h3-font-size;
-	@include breakpoint($grid-liquid) {
-		font-size: $h2-font-size;
-	}
+  font-size: $h3-font-size;
+  @include breakpoint($grid-liquid) {
+    font-size: $h2-font-size;
+  }
 }
 
 h3 {
-	font-size: $h3-font-size;
+  font-size: $h3-font-size;
 }
 
 h4 {
-	font-size: $h4-font-size;
+  font-size: $h4-font-size;
 }
 
 p {
-	line-height: $base-line-height;
+  line-height: $base-line-height;
 }
 
 a {
-	color: $anchor-color;
-	text-decoration: underline;
-	@include transition-property(color);
-	@include transition-duration(.15s);
-	&:visited { 
-		color: $anchor-color;
-	}
-	&:hover, &:focus {
-		text-decoration: underline;
-		color: $anchor-color-hover;
-		outline: 0;
-	} 
-	&:focus {
-		outline: thin dotted;
-	}
-	&:active {
-		outline: 0;
-	}
+  color: $anchor-color;
+  text-decoration: underline;
+  @include transition-property(color);
+  @include transition-duration(.15s);
+  &:visited { 
+    color: $anchor-color;
+  }
+  &:hover, &:focus {
+    text-decoration: underline;
+    color: $anchor-color-hover;
+    outline: 0;
+  } 
+  &:focus {
+    outline: thin dotted;
+  }
+  &:active {
+    outline: 0;
+  }
 }
 
 ol {
@@ -79,19 +79,25 @@ ol {
   }
 }
 
+ul {
+  list-style: none;
+  padding-left: .1em;
+  margin-bottom: 0;
+  li {
+    margin-top: $half-spacing;
+  }
+}
+
 ul.branded {
-	list-style: none;
-	padding-left: .1em;
-	margin-bottom: 0;
-	li {
-		margin: -.15em 0 0;
-	}
-	li:before {
-		color: $bullet-color;
-		content: "•";
-		position: relative;
-		font-size: 1.6em;
-		left: -.13em;
-		top: .1em;
-	}
+  li {
+    margin: -.15em 0 0;
+  }
+  li:before {
+    color: $bullet-color;
+    content: "•";
+    position: relative;
+    font-size: 1.6em;
+    left: -.13em;
+    top: .1em;
+  }
 }
