add respond.js for IE8

--- a/_includes/as-app-footer.html
+++ b/_includes/as-app-footer.html
@@ -5,4 +5,5 @@
 </footer>
 
 <script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/respond/dest/respond.min.js"></script>
 <script src="{{ site.baseurl }}/js/spin.min.js"></script>
