fallback colors for IE8 via modernizr rgba check

--- a/_scss/config/_as-app-vars.scss
+++ b/_scss/config/_as-app-vars.scss
@@ -70,6 +70,7 @@ $alternate-light-grey: lighten($neutral, 15%);
 
 $secondary-login-option-color: #526991;
 $sp-support-bg: rgba($neutral, .85);
+$sp-support-bg-fallback: #e4eef4;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
