--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -99,6 +99,7 @@ $alternate-light-grey: lighten($neutral, 15%);
 
 $secondary-login-option-color: #526991;
 $sp-support-bg: rgba($white, .55);
+$sp-support-bg-fallback: #e4eef4;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
