--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -70,6 +70,7 @@ $alternate-light-grey: lighten($neutral, 15%);
 
 $secondary-login-option-color: #526991;
 $sp-support-bg: rgba($white, .75);
+$sp-support-bg-fallback: #e4eef4;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
