--- a/_includes/as-app-sso-form.html
+++ b/_includes/as-app-sso-form.html
@@ -6,12 +6,12 @@
 
   <fieldset class="fieldset">
     <label for="logon">Account ID</label>
-    <input id="logon" name="logon" type="text" placeholder="Application UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long">
+    <input id="logon" name="logon" type="text" placeholder="Application UCLA Logon ID" aria-required="true" pattern=".{3,15}" autocorrect="off" autocapitalize="none" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long">
   </fieldset>
 
   <fieldset class="fieldset">
     <label for="pass">Password</label>
-    <input id="pass" name="pass" type="password" placeholder="Application UCLA Logon Password" aria-required="true" pattern=".{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
+    <input id="pass" name="pass" type="password" placeholder="Application UCLA Logon Password" aria-required="true" pattern=".{8,128}" autocorrect="off" autocapitalize="none" required data-errormessage="Passwords must be at least 8 characters long">
   </fieldset>
 
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
