--- a/_includes/health-sso-form-fail.html
+++ b/_includes/health-sso-form-fail.html
@@ -12,12 +12,12 @@
 
   <fieldset class="fieldset">
     <label for="logon">Medcenter MedcenterAccount ID</label>
-    <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
+    <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" autocorrect="off" autocapitalize="none" required autofocus>
   </fieldset>
 
   <fieldset class="fieldset">
     <label for="pass">Medcenter Password</label>
-    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required>
+    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" autocorrect="off" autocapitalize="none" required>
   </fieldset>
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
