--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -4,12 +4,12 @@
 
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters" tabindex="1" required autofocus>
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" title="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters" tabindex="1" autocorrect="off" autocapitalize="none"required autofocus>
   </fieldset>
 
   <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords must be at least 8 characters long and consist of letters, numbers, and the following symbols: !@#$%^&*().," tabindex="2" required>
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords must be at least 8 characters long and consist of letters, numbers, and the following symbols: !@#$%^&*().," tabindex="2" autocorrect="off" autocapitalize="none" required>
 	</fieldset>
 
 	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
