bower update + add webshims back in

--- a/_scss/ucla-logon.scss
+++ b/_scss/ucla-logon.scss
@@ -25,7 +25,7 @@
 @import 'ucla-iam-core/general-classes';
 @import 'ucla-iam-core/messages';
 @import 'ucla-iam-core/flair';
-// @import 'ucla-iam-core/webshim-styling';
+@import 'ucla-iam-core/webshim-styling';
 
 // app specific styles
 @import 'ucla-this-app/layout';
