--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -4,6 +4,8 @@
 	</div>
 </footer>
 
-<script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
 <script src="{{ site.baseurl }}/bower_components/respond/dest/respond.min.js"></script>
 <script src="{{ site.baseurl }}/js/spin.min.js"></script>
+<script src="{{ site.baseurl }}/js/sso.js"></script>
