--- a/_scss/ucla-logon.scss
+++ b/_scss/ucla-logon.scss
@@ -1,33 +1,90 @@
-// general layout gems
-@import 'singularitygs';
-@import 'breakpoint';
-@import 'compass/css3';
-@import 'compass/utilities/general/clearfix';
+@charset 'utf-8';
 
-// normalize components, see https://github.com/ksmandersen/compass-normalize
-@import 'normalize-version';
-@import 'normalize/html5';
-@import 'normalize/base';
-// @import 'normalize/links';
-// @import 'normalize/typography';
-// @import 'normalize/embeds';
-@import 'normalize/groups';
-@import 'normalize/forms';
-// @import 'normalize/tables';
+/////////////////////////////////////////
+///       FRAMEWORK COMPONENTS
+/////////////////////////////////////////
 
-// UCLA Single Sign On vars
-@import 'config/ucla-vars';
+// Fonts
+@import 'ucla/proxima-nova';
 
-// general IAM partials - DO NOT EDIT
-@import 'ucla-iam-core/global-elements';
-// @import 'ucla-iam-core/tables';
-@import 'ucla-iam-core/form-elements';
-@import 'ucla-iam-core/general-classes';
-@import 'ucla-iam-core/messages';
-@import 'ucla-iam-core/flair';
-@import 'ucla-iam-core/webshim-styling';
+// Main library stuff
+@import 'config/ucla-settings';
+@import 'foundation';
+// @import 'motion-ui';
 
-// app specific styles
-@import 'ucla-this-app/layout';
-@import 'ucla-this-app/login-form';
-@import 'ucla-this-app/supporting-content';
+// Some useful tools
+@import 'uc/uc-general-utilities';
+@import 'toolkit'; // https://github.com/at-import/toolkit
+
+/////////////////////////////////////////
+///  CSS CLASSES OUTPUT BY FOUNDATION
+/////////////////////////////////////////
+
+@include foundation-global-styles;
+@include foundation-grid;
+// @include foundation-flex-grid;
+@include foundation-typography;
+// @include foundation-button;
+@include foundation-forms;
+// @include foundation-range-input;
+// @include foundation-accordion;
+// @include foundation-accordion-menu;
+// @include foundation-badge;
+// @include foundation-breadcrumbs;
+// @include foundation-button-group;
+// @include foundation-callout;
+// @include foundation-close-button;
+// @include foundation-drilldown-menu;
+// @include foundation-dropdown;
+// @include foundation-dropdown-menu;
+// @include foundation-flex-video;
+// @include foundation-label;
+// @include foundation-media-object;
+@include foundation-menu;
+// @include foundation-off-canvas;
+// @include foundation-orbit;
+// @include foundation-pagination;
+// @include foundation-progress-bar;
+// @include foundation-progress-element;
+// @include foundation-meter-element;
+// @include foundation-slider;
+@include foundation-sticky;
+// @include foundation-reveal;
+// @include foundation-switch;
+// @include foundation-table;
+// @include foundation-tabs;
+// @include foundation-thumbnail;
+// @include foundation-title-bar;
+// @include foundation-tooltip;
+// @include foundation-top-bar;
+@include foundation-visibility-classes;
+// @include foundation-float-classes;
+// @include foundation-flex-classes;
+
+// ZURB Motion UI
+// @include motion-ui-transitions;
+// @include motion-ui-animations;
+
+/////////////////////////////////////////
+///   ADDITIONAL UC SPECIFIC STYLING
+/////////////////////////////////////////
+
+// UCLA
+@import 'ucla/ucla-badges';
+@import 'ucla/ucla-decorative';
+@import 'ucla/ucla-messages';
+@import 'ucla/iam-footer';
+
+// Polyfill Overrides
+@import 'ucla/webshim-styling';
+
+/////////////////////////////////////////
+///      APPLICATION COMPONENTS
+/////////////////////////////////////////
+
+// Login as Application Specfic
+@import 'config/ucla-settings';
+
+@import 'components/layout';
+@import 'components/login-form';
+@import 'components/supporting-content';
