--- a/_scss/config/_ucla-settings.scss
+++ b/_scss/config/_ucla-settings.scss
@@ -72,7 +72,7 @@ $warning-color: $ucla-orange;
 $alert-color: $ucla-pink;
 $alert-color-dark: darken($ucla-pink, 42%);
 $alert-color-dark-alternate: darken($ucla-pink, 46%);
-$body-background: url('../images/skyline.jpg') no-repeat fixed;
+$body-background: none;
 $body-font-color: #555;
 $body-font-family: $ucla-font-stack;
 $body-antialiased: true;
@@ -577,7 +577,8 @@ $topbar-input-width: 200px;
 
 $global-letter-spacing: 0.5px;
 $secondary-login-option-color: #526991;
-$sp-support-bg: rgba($ucla-neutral, .85);
+$sp-support-bg: rgba($off-white, .85);
 $sp-support-bg-fallback: #e4eef4;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
+$html-background: url('../images/skyline.jpg') no-repeat fixed;
