--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -5,7 +5,10 @@
 </footer>
 
 <script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
-<script src="{{ site.baseurl }}/bower_components/respond/dest/respond.min.js"></script>
+<script src="{{ site.baseurl }}/js/placeholders.min.js"></script>
 <script src="{{ site.baseurl }}/js/spin.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/foundation/js/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/foundation/js/foundation.core.js"></script>
+<script src="{{ site.baseurl }}/bower_components/foundation/js/foundation.util.mediaQuery.js"></script>
+<script src="{{ site.baseurl }}/bower_components/foundation/js/foundation.abide.js"></script>
 <script src="{{ site.baseurl }}/js/sso.js"></script>
