--- a/_scss/config/_as-app-settings.scss
+++ b/_scss/config/_as-app-settings.scss
@@ -581,3 +581,4 @@ $sp-support-bg: rgba($ucla-neutral, .85);
 $sp-support-bg-fallback: #e4eef4;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
+$html-background: url('../images/skyline.jpg') no-repeat fixed;
