--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -40,7 +40,7 @@
 // @include foundation-flex-video;
 // @include foundation-label;
 // @include foundation-media-object;
-@include foundation-menu;
+// @include foundation-menu;
 // @include foundation-off-canvas;
 // @include foundation-orbit;
 // @include foundation-pagination;
@@ -48,7 +48,7 @@
 // @include foundation-progress-element;
 // @include foundation-meter-element;
 // @include foundation-slider;
-@include foundation-sticky;
+// @include foundation-sticky;
 // @include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
@@ -57,7 +57,7 @@
 // @include foundation-title-bar;
 // @include foundation-tooltip;
 // @include foundation-top-bar;
-@include foundation-visibility-classes;
+// @include foundation-visibility-classes;
 // @include foundation-float-classes;
 // @include foundation-flex-classes;
 
@@ -83,9 +83,7 @@
 ///      APPLICATION COMPONENTS
 /////////////////////////////////////////
 
-// Login as Application Specfic
-@import 'config/med-settings';
-
 @import 'components/layout';
 @import 'components/login-form';
 @import 'components/supporting-content';
+@import 'components/form-tweaks';
