--- a/_includes/health-sso-form-secondary.html
+++ b/_includes/health-sso-form-secondary.html
@@ -4,15 +4,17 @@
 
   <legend>Sign In with your Medcenter ID</legend>
 
-  <fieldset class="fieldset">
-    <label for="logon">Medcenter Account ID</label>
-    <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" autocorrect="off" autocapitalize="none" required autofocus>
-  </fieldset>
+  <fieldset>
+		<label for="logon"><span hidden>Your Medcenter Account ID</span>
+  		<input id="logon" name="logon" type="text" placeholder="Your Medcenter Account ID" aria-required="true" pattern="[a-z0-9]{3,15}" title="Logon IDs are 3 to 15 characters long." tabindex="1" autocorrect="off" autocapitalize="none" required autofocus>
+  		<span class="form-error">Logon IDs are 3 to 15 characters long.</span>
+		</label>
 
-  <fieldset class="fieldset">
-    <label for="pass">Medcenter Password</label>
-    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" autocorrect="off" autocapitalize="none" required data-errorbox="passerror">
-  </fieldset>
+		<label for="pass"><span hidden>Your Medcenter Password</span>
+		  <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}"  title="Passwords are at least 8 characters long and can consist of letters, numbers, and the following symbols: !@#$%^&*().," tabindex="2" autocorrect="off" autocapitalize="none" required>
+		<span class="form-error">Passwords are at least 8 characters long and can consist of letters, numbers, and the following symbols: !@#$%^&*().,</span>
+		</label>
+	</fieldset>
 
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 
