--- a/_scss/components/_layout.scss
+++ b/_scss/components/_layout.scss
@@ -8,6 +8,7 @@ html {
 
 body {
   background: none !important;
+  font-family: $ucla-font-stack;
 }
 
 section[role="main"] {
@@ -18,7 +19,7 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 	width: 96%;
 	margin: $global-margin auto 0;
 	@include breakpoint(grid-elastic) {
-		width: 36em;
+		width: 36rem;
 	}
 }
 .ucla-iam-footer-content {
@@ -31,6 +32,6 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
 
 .wide {
   @include breakpoint(grid-elastic) {
-    width: 42em;
+    width: 42rem;
   }
 }
