--- a/_scss/components/_login-form.scss
+++ b/_scss/components/_login-form.scss
@@ -8,11 +8,9 @@
 	border-radius: $global-radius;
 	padding: 2.5% 7.5%;
 	@include breakpoint(grid-elastic) {
-		padding: ($global-spacing * 2) ($global-spacing * 4);
+		padding: $global-padding ($global-padding * 2.5);
 	}
-	label {
-		display: none;
-	}
+  @include grid-row();
 	fieldset {
 		border: none;
 	}
@@ -21,7 +19,7 @@
 #sso .error-box {
 	width: 100%;
 	@include breakpoint(grid-liquid) {
-		width: 26em;
+		width: 26rem;
 	}
 	h2 {
 		font-size: rem-calc(nested-map-get($header-sizes, large-type, h3));
@@ -32,7 +30,7 @@
 .input[type="submit"] {
 	width: 100%;
 	@include breakpoint(grid-liquid) {
-		@include grid-row(3);
+		@include grid-column(3);
 	}
 	padding-top: 0;
 }
@@ -40,8 +38,9 @@
 .sso-links {
 	width: 100%;
 	margin-bottom: $global-spacing;
+	padding-left: $global-padding / 2;
 	@include breakpoint(grid-liquid) {
-		@include grid-row(9);
+		@include grid-column(9);
 		margin: 0;
 	}
 	font-size: $helptext-font-size;
