abide for all forms, styling fixes

--- a/_includes/health-sso-form-secondary.html
+++ b/_includes/health-sso-form-secondary.html
@@ -1,4 +1,4 @@
-<form id="sso" role="form" action="/" method="post" class="ws-validate">
+<form id="sso" role="form" action="/" method="post" data-abide novalidate>
 
   <img src="{{ site.baseurl }}/images/health.png" alt="UCLA Health" class="logo">
 
