--- a/_scss/ucla-logon.scss
+++ b/_scss/ucla-logon.scss
@@ -76,6 +76,7 @@
 @import 'ucla/iam-footer';
 @import 'ucla/errors';
 @import 'ucla/prototyping-controls';
+@import 'ucla/form-tweaks';
 
 // Polyfill Overrides
 // @import 'ucla/webshim-styling';
@@ -87,4 +88,3 @@
 @import 'components/layout';
 @import 'components/login-form';
 @import 'components/supporting-content';
-@import 'components/form-tweaks';
