--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -1,4 +1,4 @@
-<form id="sso" role="form" action="/" method="post" class="ws-validate">
+<form id="sso" role="form" action="/" method="post" data-abide novalidate>
 
   <legend>Sign In with your UCLA Logon ID</legend>
 
