clean up old partials, fix logon form display a bit

--- a/_scss/as-app.scss
+++ b/_scss/as-app.scss
@@ -71,9 +71,12 @@
 @import 'ucla/ucla-decorative';
 @import 'ucla/ucla-messages';
 @import 'ucla/iam-footer';
+@import 'ucla/errors';
+@import 'ucla/prototyping-controls';
+@import 'ucla/form-tweaks';
 
 // Polyfill Overrides
-@import 'ucla/webshim-styling';
+// @import 'ucla/webshim-styling';
 
 /////////////////////////////////////////
 ///      APPLICATION COMPONENTS
@@ -82,4 +85,3 @@
 @import 'components/layout';
 @import 'components/login-form';
 @import 'components/supporting-content';
-@import 'components/form-tweaks';
