--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -72,9 +72,12 @@
 @import 'ucla/ucla-decorative';
 @import 'ucla/ucla-messages';
 @import 'ucla/iam-footer';
+@import 'ucla/errors';
+@import 'ucla/prototyping-controls';
+@import 'ucla/form-tweaks';
 
 // Polyfill Overrides
-@import 'ucla/webshim-styling';
+// @import 'ucla/webshim-styling';
 
 /////////////////////////////////////////
 ///      APPLICATION COMPONENTS
@@ -83,4 +86,3 @@
 @import 'components/layout';
 @import 'components/login-form';
 @import 'components/supporting-content';
-@import 'components/form-tweaks';
