--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -14,7 +14,7 @@
 		</label>
 	</fieldset>
 
-	<button class="primary-button" type="submit" name="sso-submit" tabindex="3">Sign In</button>
+	<button class="primary-button" type="submit" name="sso-submit" class="sso-submit" tabindex="3">Sign In</button>
 
 	<ul class="sso-links">
 		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</li>
