--- a/_scss/components/_layout.scss
+++ b/_scss/components/_layout.scss
@@ -35,3 +35,27 @@ article, #sso, .sp-support, .ucla-iam-footer-content, .breaking-news {
     width: 42rem;
   }
 }
+
+.secondary-login {
+  @include grid-row();
+}
+
+.sso-submit {
+	width: 100%;
+	@include breakpoint(grid-liquid) {
+		@include grid-column(3);
+		margin: 0;
+	}
+}
+
+.sso-links {
+	width: 100%;
+	@include breakpoint(grid-liquid) {
+		@include grid-column(9);
+		margin: 0;
+	}
+}
+
+.line-thru {
+  @include line-thru();
+}
