--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -14,12 +14,14 @@
 		</label>
 	</fieldset>
 	
-	<button class="primary-button" type="submit" name="sso-submit" class="sso-submit" tabindex="3">Sign In</button>
-	
-	<ul class="sso-links">
-		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</li>
-		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
-	</ul>
+	<div class="row">
+  	<button class="primary-button" type="submit" name="sso-submit" class="sso-submit" tabindex="3">Sign In</button>
+  	
+  	<ul class="sso-links">
+  		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</li>
+  		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+  	</ul>
+	</div>
 	
 	<aside class="secondary-login">
   	<span class="line-thru">or</span>
