a few more spacing tweaks

--- a/_scss/components/_login-form.scss
+++ b/_scss/components/_login-form.scss
@@ -46,7 +46,7 @@
 }
 
 .secondary-login {
-  margin-top: $global-spacing;
+  margin-top: -$global-spacing;
   p {
     font-size: $helptext-font-size;
     margin: 0 auto;
