update partial loading syntax

--- a/src/layouts/medcenter.html
+++ b/src/layouts/medcenter.html
@@ -1,10 +1,10 @@
-{{> include health-head.html }}
+{{> health-head.html }}
 
 	<section class="content" role="main">
 			{{> body}}
 	</section>
 
-	{{> include health-footer.html }}
+	 {{> health-footer.html }}
 
 </body>
 </html>
