--- a/src/layouts/ucla-logon-on-qa.html
+++ b/src/layouts/ucla-logon-on-qa.html
@@ -1,6 +1,6 @@
-{{> include ucla-head.html }}
+{{> ucla-head.html }}
 
-{{> include banner-qa.html }}
+{{> banner-qa.html }}
 
 	<header class="logo" role="banner"><img src="/SSOUI/images/ucla-white.png" alt="UCLA"></header>
 
@@ -8,7 +8,7 @@
 			{{> body}}
 	</section>
 
-	{{> include ucla-footer.html }}
+	 {{> ucla-footer.html }}
 
 </body>
 </html>
