--- a/src/layouts/as-app.html
+++ b/src/layouts/as-app.html
@@ -1,10 +1,10 @@
-{{> include as-app-head.html }}
+{{> as-app-head.html }}
 
 	<section class="content" role="main">
 			{{> body}}
 	</section>
 
-	{{> include as-app-footer.html }}
+	 {{> as-app-footer.html }}
 
 </body>
 </html>
