--- a/src/layouts/ucla-logon.html
+++ b/src/layouts/ucla-logon.html
@@ -1,4 +1,4 @@
-{{> include ucla-head.html }}
+{{> ucla-head.html }}
 
 	<header class="logo" role="banner"><img src="/SSOUI/images/ucla-white.png" alt="UCLA"></header>
 
@@ -6,7 +6,7 @@
 			{{> body}}
 	</section>
 
-	{{> include ucla-footer.html }}
+	 {{> ucla-footer.html }}
 
 </body>
 </html>
