--- a/src/layouts/ucla-logon-on-dev.html
+++ b/src/layouts/ucla-logon-on-dev.html
@@ -1,6 +1,6 @@
-{{> ucla-head.html }}
+{{> ucla-head }}
 
-{{> banner-dev.html }}
+{{> banner-dev }}
 
 	<header class="logo" role="banner"><img src="/SSOUI/images/ucla-white.png" alt="UCLA"></header>
 
@@ -8,7 +8,7 @@
 			{{> body}}
 	</section>
 
-	 ucla-footer.html }}
+	 ucla-footer }}
 
 </body>
 </html>
