--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,6 +1,6 @@
-{{> ucla-head.html }}
+{{> ucla-head }}
 
-{{> banner-qa.html }}
+{{> banner-qa }}
 
 	<header class="logo" role="banner"><img src="/SSOUI/images/ucla-white.png" alt="UCLA"></header>
 
@@ -8,7 +8,7 @@
 			{{> body}}
 	</section>
 
-	{{> ucla-footer.html }}
+	{{> ucla-footer }}
 
 </body>
 </html>
