--- a/src/partials/health-sso-form-secondary.html
+++ b/src/partials/health-sso-form-secondary.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
 
-  <img src="/SSOUI/images/health.png" alt="UCLA Health" class="logo">
+  <img src="{{root}}/images/health.png" alt="UCLA Health" class="logo">
 
   <legend>Sign In with your Medcenter ID</legend>
 
