--- a/src/partials/ucla-footer-as-app-link.html
+++ b/src/partials/ucla-footer-as-app-link.html
@@ -1,7 +1,7 @@
 <footer role="contentinfo" class="ucla-iam-footer">
 	<div class="ucla-iam-footer-content">
-		<p><a href="/SSOUI/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="/SSOUI/as-app-mocks/index.html" class="right" title="login as the application"><i class="fa fa-cogs"></i></a></p>
+		<p><a href="{{root}}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{root}}/as-app-mocks/index.html" class="right" title="login as the application"><i class="fa fa-cogs"></i></a></p>
 	</div>
 </footer>
 
-<script src="/SSOUI/js/placeholders.min.js"></script>
+<script src="{{root}}/js/placeholders.min.js"></script>
