--- a/src/partials/as-app-head.html
+++ b/src/partials/as-app-head.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/SSOUI/css/as-app.css">
+	<link rel="stylesheet" href="{{root}}/css/as-app.css">
 	<script src="/SSOUI/js/modernizr.custom.js"></script>
 </head>
 
