--- a/src/partials/as-app-sso-form.html
+++ b/src/partials/as-app-sso-form.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post" data-abide novalidate>
 
-  <img src="/SSOUI/images/ucla-black.png" alt="UCLA" class="logo">
+  <img src="{{root}}/images/ucla-black.png" alt="UCLA" class="logo">
 
   <legend>Sign In using this application's UCLA Logon Account</legend>
 
