--- a/src/partials/health-footer.html
+++ b/src/partials/health-footer.html
@@ -1,7 +1,7 @@
 <footer role="contentinfo" class="ucla-iam-footer">
 	<div class="ucla-iam-footer-content">
-		<p><a href="/SSOUI/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
+		<p><a href="{{root}}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
 	</div>
 </footer>
 
-<script src="/SSOUI/js/assets/app.js"></script>
+<script src="{{root}}/js/assets/app.js"></script>
