--- a/src/partials/health-head.html
+++ b/src/partials/health-head.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>UCLA Single Sign-On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/SSOUI/css/medcenter.css">
-	<script src="/SSOUI/js/modernizr.custom.js"></script>
+	<link rel="stylesheet" href="{{root}}/css/medcenter.css">
+	<script src="{{root}}/js/modernizr.custom.js"></script>
 </head>
 
 <body>
