--- a/src/layouts/ucla-logon-on-dev.html
+++ b/src/layouts/ucla-logon-on-dev.html
@@ -2,7 +2,7 @@
 
 {{> banner-dev }}
 
-	<header class="logo" role="banner"><img src="{{root}}/images/ucla-white.png" alt="UCLA"></header>
+	<header class="logo" role="banner"><img src="{{root}}assets/img/ucla-white.png" alt="UCLA"></header>
 
 	<section class="content" role="main">
 			{{> body}}
