fix logo locations for non ucla-logon

--- a/src/assets/scss/config/_med-settings.scss
+++ b/src/assets/scss/config/_med-settings.scss
@@ -581,4 +581,4 @@ $sp-support-bg: rgba($ucla-neutral, .85);
 $sp-support-bg-fallback: #e4eef4;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-health-gold;
-$html-background: url('../images/skyline.jpg') no-repeat fixed;
+$html-background: $ucla-blue-old-dark;
