--- a/src/layouts/medcenter.html
+++ b/src/layouts/medcenter.html
@@ -1,5 +1,7 @@
 {{> health-head }}
 
+  <header class="logo" role="banner"><img src="{{root}}assets/img/health.png" alt="UCLA Health"></header>
+
 	<section class="content" role="main">
 			{{> body}}
 	</section>
