--- a/src/assets/scss/config/_as-app-settings.scss
+++ b/src/assets/scss/config/_as-app-settings.scss
@@ -581,4 +581,4 @@ $sp-support-bg: rgba($ucla-neutral, .85);
 $sp-support-bg-fallback: #e4eef4;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
-$html-background: url('../images/skyline.jpg') no-repeat fixed;
+$html-background: $dark-gray;
