--- a/src/layouts/as-app.html
+++ b/src/layouts/as-app.html
@@ -1,5 +1,7 @@
 {{> as-app-head }}
 
+  <header class="logo" role="banner"><img src="{{root}}assets/img/ucla-black.png" alt="UCLA"></header>
+
 	<section class="content" role="main">
 			{{> body}}
 	</section>
